tests/programs/invalid/final_locals.java
public class final_locals {
  public int m() {
    final int x = 42;
    return x;
  }
}